infrastructure/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  labels:
    app: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: http
      port: 80          
      targetPort: 8080
      protocol: TCP
